--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset is slightly unbalance, using F1 score as metrics would be an better option."
+    "The dataset is slightly imbalance, using F1 score as metrics would be a better option."
    ]
   },
   {
